--- a/css/form.css
+++ b/css/form.css
@@ -27,6 +27,10 @@
   box-sizing: border-box;
   font-size: 14px;
 }
+.form input.date {
+  width: 110px;
+  text-align: center;
+}
 .form button {
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
